Add Navigation character menu, edit images with characters, hover links on images

--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	
 	<title>Rick and Morty</title>
+	<link rel="stylesheet" href="Fonts/Fonts.css">
 	<link rel="stylesheet" href="Styles/ResetStyles.css">
 	<link rel="stylesheet" href="Styles/HeaderStyles.css">
 	<link rel="stylesheet" href="Styles/MainStyles.css">
@@ -14,7 +15,36 @@
 			<img src="Images/Header/background_V3_characters.png" alt="">
 		</div>
 		<div class="MainBlock">
-			
+			<div class="navigation_block_characters">
+				<h2>Персонажи</h2>
+			</div>
+			<div class="navigation_block">
+				<div class="nav_block">
+					<h2>Rick Sanchez</h2>
+					<a href="#"><img src="Images/Nav_menu/Rick.jpg" alt="#"></a>
+				</div>
+				<div class="nav_block">
+					<h2>Morty Smith</h2>
+					<a href="#"><img src="Images/Nav_menu/Morty.jpg" alt="#"></a>
+				</div>
+				<div class="nav_block">
+					<h2>Summer Smith</h2>
+					<a href="#"><img src="Images/Nav_menu/Summer.jpg" alt="#"></a>
+				</div>
+				<div class="nav_block">
+					<h2>Beth Smith</h2>
+					<a href="#"><img src="Images/Nav_menu/Bet.jpg" alt="#"></a>
+				</div>
+				<div class="nav_block">
+					<h2>Jerry Smith</h2>
+					<a href="#"><img src="Images/Nav_menu/Jerry.jpg" alt="#"></a>
+				</div>
+				<div class="nav_block">
+					<h2>Mr. Poopybutt</h2>
+					<a href="#"><img src="Images/Nav_menu/mr_poopybutt.jpg" alt="#"></a>
+				</div>
+			</div>
+
 		</div>
 	</div>
 </body>
