Added more characters and game window

--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="Styles/ResetStyles.css">
 	<link rel="stylesheet" href="Styles/HeaderStyles.css">
 	<link rel="stylesheet" href="Styles/MainStyles.css">
+	<link rel="stylesheet" href="Styles/Game.css">
 </head>
 <body>
 	<div class="Wrapper">
@@ -15,10 +16,13 @@
 			<img src="Images/Header/background_V3_characters.png" alt="">
 		</div>
 		<div class="MainBlock">
-			<div class="navigation_block_characters">
-				<h2>Персонажи</h2>
-			</div>
 			<div class="navigation_block">
+				<div class="navigation_block_characters">
+					<h2>Персонажи</h2>
+				</div>
+				<!--/////////////////////////////////////////////////////////////////-->
+				<!--///////////////////   Адресса на героев   ///////////////////////-->
+				<!--/////////////////////////////////////////////////////////////////-->
 				<div class="nav_block">
 					<h2>Rick Sanchez</h2>
 					<a href="#"><img src="Images/Nav_menu/Rick.jpg" alt="#"></a>
@@ -43,8 +47,57 @@
 					<h2>Mr. Poopybutt</h2>
 					<a href="#"><img src="Images/Nav_menu/mr_poopybutt.jpg" alt="#"></a>
 				</div>
+				<div class="nav_block">
+					<h2>Jessica</h2>
+					<a href="#"><img src="Images/Nav_menu/Jessica.jpg" alt="#"></a>
+				</div>
+				<div class="nav_block">
+					<h2>BirdPerson</h2>
+					<a href="#"><img src="Images/Nav_menu/Birdperson.jpg" alt="#"></a>
+				</div>
+				<div class="nav_block">
+					<h2>Squanchy</h2>
+					<a href="#"><img src="Images/Nav_menu/Squanchy.jpg" alt="#"></a>
+				</div>
+				<div class="nav_block">
+					<h2>Mr. Meeseeks</h2>
+					<a href="#"><img src="Images/Nav_menu/meeseeks.jpg" alt="#"></a>
+				</div>
+				<div class="nav_block">
+					<h2>Evil Morty</h2>
+					<a href="#"><img src="Images/Nav_menu/EvilMorty.jpg" alt="#"></a>
+				</div>
+				<div class="nav_block">
+					<h2>Temmie</h2>
+					<a href="#"><img src="Images/Nav_menu/Temmie.jpg" alt="#"></a>
+				</div>
+				<!--/////////////////////////////////////////////////////////////////-->
+				<!--/////////////////////////////////////////////////////////////////-->
+				<!--/////////////////////////////////////////////////////////////////-->
 			</div>
 
+			<div class="block_adout_serial">
+				
+			</div>
+			<div class="Main_Game_Block">
+				<div class="Game_block">
+				<img class="Background_game" src="Images/Game/Rick-and-Morty-Zoom-Backgrounds-Garage-1.png" alt="">
+				<div class="Game_links">
+					<div class="Pickle_Rick LG">
+						<a href=""><img src="Images/Game/Pickle_Rick.png" alt="#"></a>
+					</div>
+					<div class="NoteBook_Jerry LG">
+						<a href=""><img src="Images/Game/NoteBook_Jerry.png" alt="#"></a>
+					</div>
+					<div class="Gun_crashed LG">
+						<a href=""><img src="Images/Game/Gun_crashed.png" alt="#"></a>
+					</div>
+					<div class="Drink_Morty LG">
+						<a href=""><img src="Images/Game/Drink_Morty.png" alt="#"></a>
+					</div>
+				</div>
+			</div>
+			</div>
 		</div>
 	</div>
 </body>
