--- a/Index.html
+++ b/Index.html
@@ -26,51 +26,51 @@
 				<!--/////////////////////////////////////////////////////////////////-->
 				<div class="nav_block">
 					<h2>Rick Sanchez</h2>
-					<a href="#"><img src="Images/Nav_menu/Rick.jpg" alt="#"></a>
+					<a href="Persons_pages/Rick.html"><img src="Images/Nav_menu/Rick.jpg" alt="#"></a>
 				</div>
 				<div class="nav_block">
 					<h2>Morty Smith</h2>
-					<a href="#"><img src="Images/Nav_menu/Morty.jpg" alt="#"></a>
+					<a href="Persons_pages/Morty.html"><img src="Images/Nav_menu/Morty.jpg" alt="#"></a>
 				</div>
 				<div class="nav_block">
 					<h2>Summer Smith</h2>
-					<a href="#"><img src="Images/Nav_menu/Summer.jpg" alt="#"></a>
+					<a href="Persons_pages/Summer.html"><img src="Images/Nav_menu/Summer.jpg" alt="#"></a>
 				</div>
 				<div class="nav_block">
 					<h2>Beth Smith</h2>
-					<a href="#"><img src="Images/Nav_menu/Bet.jpg" alt="#"></a>
+					<a href="Persons_pages/Beth.html"><img src="Images/Nav_menu/Bet.jpg" alt="#"></a>
 				</div>
 				<div class="nav_block">
 					<h2>Jerry Smith</h2>
-					<a href="#"><img src="Images/Nav_menu/Jerry.jpg" alt="#"></a>
+					<a href="Persons_pages/Jerry.html"><img src="Images/Nav_menu/Jerry.jpg" alt="#"></a>
 				</div>
 				<div class="nav_block">
 					<h2>Mr. Poopybutt</h2>
-					<a href="#"><img src="Images/Nav_menu/mr_poopybutt.jpg" alt="#"></a>
+					<a href="Persons_pages/Mr_pooppybutthole.html"><img src="Images/Nav_menu/mr_poopybutt.jpg" alt="#"></a>
 				</div>
 				<div class="nav_block">
 					<h2>Jessica</h2>
-					<a href="#"><img src="Images/Nav_menu/Jessica.jpg" alt="#"></a>
+					<a href="Persons_pages/Jessica.html"><img src="Images/Nav_menu/Jessica.jpg" alt="#"></a>
 				</div>
 				<div class="nav_block">
 					<h2>BirdPerson</h2>
-					<a href="#"><img src="Images/Nav_menu/Birdperson.jpg" alt="#"></a>
+					<a href="Persons_pages/BirdPerson.html"><img src="Images/Nav_menu/Birdperson.jpg" alt="#"></a>
 				</div>
 				<div class="nav_block">
 					<h2>Squanchy</h2>
-					<a href="#"><img src="Images/Nav_menu/Squanchy.jpg" alt="#"></a>
+					<a href="Persons_pages/Squanchy.html"><img src="Images/Nav_menu/Squanchy.jpg" alt="#"></a>
 				</div>
 				<div class="nav_block">
 					<h2>Mr. Meeseeks</h2>
-					<a href="#"><img src="Images/Nav_menu/meeseeks.jpg" alt="#"></a>
+					<a href="Persons_pages/Mr_Meeseeks.html"><img src="Images/Nav_menu/meeseeks.jpg" alt="#"></a>
 				</div>
 				<div class="nav_block">
 					<h2>Evil Morty</h2>
-					<a href="#"><img src="Images/Nav_menu/EvilMorty.jpg" alt="#"></a>
+					<a href="Persons_pages/Evil_Morty.html"><img src="Images/Nav_menu/EvilMorty.jpg" alt="#"></a>
 				</div>
 				<div class="nav_block">
 					<h2>Temmie</h2>
-					<a href="#"><img src="Images/Nav_menu/Temmie.jpg" alt="#"></a>
+					<a href="Persons_pages/Temmie.html"><img src="Images/Nav_menu/Temmie.jpg" alt="#"></a>
 				</div>
 				<!--/////////////////////////////////////////////////////////////////-->
 				<!--/////////////////////////////////////////////////////////////////-->
@@ -105,94 +105,6 @@
 				<!--/////////////////////////////////////////////////////////////////-->
 				<!--/////////////////////////////////////////////////////////////////-->
 				<!--/////////////////////////////////////////////////////////////////-->
-
-
-				<!--/////////////////////////////////////////////////////////////////-->
-				<!--////////////////    Характеристика героев    ////////////////////-->
-				<!--/////////////////////////////////////////////////////////////////-->
-				<div class="Characteristic_Block">
-					<div class="Person_Characteristic image_left" id="Rick_Char">
-						<img src="Images/Nav_menu/Rick.jpg" alt="#">
-						<div class="text">
-							<p>
-								Циничный ученый, социопат, страдающий алкоголизмом, скептичен, обладает незаурядным чувством юмора (преимущественно черным). Его поведение доставляет огромное беспокойство для семьи его дочери, в частности за безопасность его внука Морти.
-							</p>
-							<br>
-							<p>
-								Дата рождения Рика - приблизительно 50-е - 60-е года. У него седые волосы и черные глаза (есть мнение, что в молодости цвет волос Рика был рыжим). Фамилия Санчез (Санчес) - является испанской, поэтому вполне вероятно, что у ученого латиноамериканские корни. Рик - высокий худой долговязый старикан. Его отличает бледно-пепельный цвет лица и седо-голубые волосы с лысиной на затылке, а также сросшаяся бровь. В одежде Рик предпочитает белый халат с голубой рубашкой под ним. Он также носит коричневые брюки, темно-коричневый пояс с желтой пряжкой, и черные ботинки. Речь Рика чаще всего малосвязна, присутствует отрыжка из-за большого количества алкоголя, который он употребляет ежедневно.
-							</p>
-							<br>
-							<p>
-								Благодаря своему гениальному уму Рик способен создавать  сложные научные изобретения. Он регулярно путешествует в других измерения, чтобы собирать необходимые ему ресурсы и охотно убиваем пришельцев, чтобы получить их. Он может быть чрезвычайно жестокими, например, когда его предают или его жизнь находится в опасности.
-							</p>
-							</div>
-					</div>
-					<div class="Person_Characteristic image_right" id="Morty_Char">
-						<img src="Images/Nav_menu/Morty.jpg" alt="#">
-						<div class="text">
-							<p>
-								Четырнадцатилетний подросток, учащийся средней школы имени Гарри Герпсона. Он является внуком Рика и его личным помощником (а также мозговым щитом) в путешествиях.
-							</p>
-							<br>
-							<p>
-								Морти - обычный среднестатистический подросток. У него короткие прямые каштановые волосы, всегда аккуратно причесанные. Он обладает круглой головой, в отличие от других членов семьи. Морти носит желтую рубашку, синие штаны и белые туфли. Школьник входит в период полового созревания, потому часто говорит срывающимся нервным голосом из-за начинающейся ломки.
-							</p>
-							<br>
-							<p>
-								Морти - добродушный и впечатлительный, юный мальчик, очень ранимый и легко подверженный чужому влиянию, как все подростки в его возрасте. Парень не отличается большим умом, иногда слегка заикается, что делает его объектом насмешек в школе. Морти преданно влюблен в свою одноклассницу Джессику, которая на него не обращает никакого внимания. Несмотря на мягкотелость, в моменты опасности в Морти просыпается сообразительность и храбрость. Также несмотря на то, что он полностью подвержен манипуляциям со стороны Рика, иногда находит в себе силы дать ему отпор. Как, например, в серии "Мисикс и разрушение", когда он стыдит Рика за его цинизм. Морти всегда готов отправиться кому-нибудь на помощь, какие бы последствия это не имело. Также он постоянно исправляет за Риком его оплошности.
-							</p>
-							</div>
-					</div>
-					<div class="Person_Characteristic image_left" id="Summer_Char">
-						<img src="Images/Nav_menu/Summer.jpg" alt="#">
-						<div class="text">
-							<p>
-								Саммер Смит (англ. Summer Smith) — старшая сестра Морти. Посещает школу Гарри Герпсона вместе с Морти.
-							</p>
-							<br>
-							<p>
-								Саммер — рыжая девочка-подросток, которая заметно выше, чем её брат.
-
-								Её наиболее распространённый наряд — розовая майка, белые джинсы и чёрные туфли.
-							</p>
-							<br>
-							<p>
-								Саммер — типичная американская девочка-подросток. Хочет хорошо выглядеть и быть популярной в школе. Считает выходки своей семьи «глупыми». Саммер очень привязана к своему телефону.
-
-								Показано, что Саммер ревнует Рика и Морти из-за тесной связи. Рик делает всё возможное, чтобы держать её на расстоянии. Несмотря на это, Саммер путешествует с дедом и братом каждое третье приключение.
-
-								Хоть Саммер не занимается наукой, как Рик, она действительно обладает неплохим интеллектом.
-							</p>
-							</div>
-					</div>
-					<div class="Person_Characteristic image_right" id="Beth_Char">
-						<img src="Images/Nav_menu/Bet.jpg" alt="#">
-						<div class="text">
-							<p>
-								Родная дочь Рика, жена Джерри, и мать Морти и Саммер.
-								Бет показана как энергичная молодая женщина из Маскегона, штата Мичиган, воспитанная ничем не примечательной матерью, после того, как отец оставил их по неизвестным причинам на неопределенное время. Она всегда хотела стать успешным врачом и работать в престижной клинике. Но ранняя беременность помешала ее планам. Она отправилась на выпускной со своим одноклассником Джерри Смитом, который обрюхатил ее дочерью, а потом сделал предложение. Однако, Бет нашла в себе силы закончить хотя бы колледж и получить заветную профессию кардиохирурга, правда для лошадей и прочих животных. По словам самой Бет она часто думает, а что бы было, если бы Саммер не было. Становится понятно, что в младенчестве дети не особенно интересовали женщину, так как она была больше занята работой и очень мало времени проводила с семьей.
-							</p>
-							<br>
-							<p>
-								Бетти Смит - независимая, умная и амбициозная женщина со своими тараканами в виде небольшой неуверенности в себе. Имея неплохую профессию, она является основным источником денег в семье и чувствует огромную ответственность за нее. Иногда ее посещают мысли продолжить учебу и воплотить в реальность юношеские мечты. Тем не менее она любит свою работу и относится к ней многим больше, чем как к простому источнику дохода. В одной из серий она переступает через свою гордость, чтобы спасти оленя.
-							</p>
-							</div>
-					</div>
-					<div class="Person_Characteristic image_left" id="Jerry_Char">
-						<img src="Images/Nav_menu/Jerry.jpg" alt="#">
-						<div class="text">
-							<p>
-								Отец Морти и Саммер, муж Бетти. Он сильно не одобряет влияние Рика на Морти, считая его небезопасным для сына. Но боясь потерять брак с Бет, ему приходится изо всех сил держать себя в руках и тесно контактировать с ее отцом. Джерри работает в малобюджетном рекламном агентстве, хотя в колледже специализировался на граждановедении.
-							</p>
-							<br>
-							<p>
-								Джерри всегда думает о интересах своей семьи, но из-за мягкого и неуравновешенного характера часто сдает позиции патриарха семьи. Очень часто он бывает неуверен в себе. Он не уверен в своем браке, в том, что дети его уважают, и во многом другом. В одной из серии, чтобы покончить со своими комплексами, он навязывается помочь Морти со школьным проектом. Это приводит к спору между Джерри и Морти о том, является ли Плутон планетой или нет. Заканчивается выяснение тем, что героев похищают пришельцы с Плутона. На Плутоне к Джерри относятся очень хорошо, и его эго раздувается до невообразимых масштабов. Однако, все заканчивается, после того, как он признает, что Плутон - не планета, пойдя на поводу у Морти.
-							</p>
-							</div>
-					</div>
-					
-
-				</div>
 		</div>
 	</div>
 </body>
