Add pages for game

--- a/Index.html
+++ b/Index.html
@@ -85,19 +85,19 @@
 				<img class="Background_game" src="Images/Game/Rick-and-Morty-Zoom-Backgrounds-Garage-1.png" alt="">
 				<div class="Game_links">
 					<div class="Pickle_Rick LG">
-						<a href=""><img src="Images/Game/Pickle_Rick.png" alt="#"></a>
+						<a href="Game_pages/Pickle_rick.html"><img src="Images/Game/Pickle_Rick.png" alt="#"></a>
 					</div>
 					<div class="NoteBook_Jerry LG">
-						<a href=""><img src="Images/Game/NoteBook_Jerry.png" alt="#"></a>
+						<a href="Game_pages/Notebook.html"><img src="Images/Game/NoteBook_Jerry.png" alt="#"></a>
 					</div>
 					<div class="Gun_crashed LG">
-						<a href=""><img src="Images/Game/Gun_crashed.png" alt="#"></a>
+						<a href="Game_pages/Rick_Gun.html"><img src="Images/Game/Gun_crashed.png" alt="#"></a>
 					</div>
 					<div class="Drink_Morty LG">
-						<a href=""><img src="Images/Game/Drink_Morty.png" alt="#"></a>
+						<a href="Game_pages/Drink_morty.html"><img src="Images/Game/Drink_Morty.png" alt="#"></a>
 					</div>
 					<div class="Plumbus LG">
-						<a href=""><img src="Images/Game/Plumbus.png" alt="#"></a>
+						<a href="Game_pages/Plumbus.html"><img src="Images/Game/Plumbus.png" alt="#"></a>
 					</div>
 				</div>
 			</div>
