--- a/Index.html
+++ b/Index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="Styles/Styles_Sesons.css">
 </head>
 <body>
+	
 	<div class="Wrapper">
 		<div class="Characters_images">
 			<img src="Images/Header/background_V3_characters.png" alt="">
@@ -337,6 +338,6 @@
 		</div>
 		
 	</div>
-	
+	<script src="JS/StopFot.js"></script>
 </body>
 </html>
