--- a/Game_pages/Drink_morty.html
+++ b/Game_pages/Drink_morty.html
@@ -8,7 +8,13 @@
 </head>
 <body id="Drink">
 	<div class="Wrapper">
-		
+		<div class="Video">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/LQFIBxak8NA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
+		<div class="Text">
+			<h1>Напиток Рика</h1>
+			<p>В одной серии Рик создаёт напиток, который в буквальном смысле заставляет покинуть Рика и Морти их вселенную. Все жители земли превращаются в крокенбергов, а Рик ищет новую вселенную для проживания.</p>
+		</div>
 	</div>
 </body>
 </html>
