--- a/Game_pages/Notebook.html
+++ b/Game_pages/Notebook.html
@@ -8,7 +8,14 @@
 </head>
 <body id="Notebook">
 	<div class="Wrapper">
-		
+		<div class="Video">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/ArnB4leg_Do" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
+		<div class="Text">
+			<h1>Немного о Джерри Смите</h1>
+			<p>Днём он обычный семьянин, который живет со своей семьей и тесть.</p>
+			<p>Но в глубине души он мечтает стать развозчиком воды.</p>
+		</div>
 	</div>
 </body>
 </html>
