--- a/Game_pages/Pickle_rick.html
+++ b/Game_pages/Pickle_rick.html
@@ -11,6 +11,10 @@
 		<div class="Video">
 			<iframe width="720" height="405" src="https://www.youtube.com/embed/XSqi5s3rfqk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
+		<div class="Text">
+			<h1>Огурчик РИИИИИИИИИИИИИИИИИК</h1>
+			<p>В одной из серий Рик превращает себя в огурчик, чтобы не идти на психотерапию с семьей. Эти действия приводят его к новым приключениям.</p>
+		</div>
 	</div>
 </body>
 </html>
