--- a/Game_pages/Plumbus.html
+++ b/Game_pages/Plumbus.html
@@ -10,6 +10,9 @@
 	<div class="Wrapper">
 		<div class="Video">
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/eMJk4y9NGvE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	</div>
+		</div>
+		<div class="Text">
+			<p>В этом видео рассказывается о том, как производится один из самых полезных и релевантных продуктов галактики!</p>
+		</div>
 </body>
 </html>
