--- a/Game_pages/Rick_Gun.html
+++ b/Game_pages/Rick_Gun.html
@@ -8,7 +8,16 @@
 </head>
 <body id="Gun">
 	<div class="Wrapper">
-		
+		<div class="Video">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/FHcaQo4fmdM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
+		<div class="Text">
+			<h1>Портальная пушка Рика</h1>
+			<p>Итак, в видео MatPat заключил, что пушку питает концентрированная темная материя. Что же это такое? Для начала отметим, что Тайсон призвал не использовать мультики для изучения науки (тут мы немного напугались). Но потом он добавил, что «Рик и Морти» заслужили свой проработанный научный статус и «достойны такого уровня обсуждения». Но он тут же подловил авторов на неточности.</p>
+			<p>По мнению ученого, создатели сериала хотели сказать «темная энергия» вместо «темной материи» (обе крайне загадочны для ученых). Темная материя служит источником большей части силы гравитации в нашей Вселенной. Проблема в том, что мы не можем с ней взаимодействовать, не считая гравитации: ее нельзя пощупать, ее нельзя увидеть, как обычные молекулы и атомы. Более того, темная материя не взаимодействует сама с собой, то есть по сути у нас нет способа как-либо на нее повлиять, и тем более ее нельзя концентрировать, потому что для этого ее нужно было бы «приклеить» к самой себе.</p>
+			<p>Темная энергия в свою очередь — сила, которая отталкивает материю в пространстве от себя самой. Грубо говоря, темная энергия отвечает за то, что наша вселенная постоянно ускоренно расширяется, а темная материя стягивает ее обратно. В научном сообществе, когда говорят о потенциальном источнике энергии, к которому можно подключиться, почти всегда имеют ввиду темную энергию.</p>
+			<p>Тайсон похвалил подход создателей «Рика и Морти», потому что они взяли какую-то загадочную штуку, о которой мало знают даже на научном фронте, и придумали с ней что-то веселое. Он отметил, что в день, когда мы наконец откроем тайну темной энергии, вполне возможно, что она сможет делать именно то, что делает в мультсериале. «Технически я не могу сказать нет», — заключил ученый, — «но это и есть веселая составляющая научной фантастики. Вы сохраняете то, что уже известно, но берете что-то на грани понимания и развиваете это в средство сторителлинга».</p>
+		</div>
 	</div>
 </body>
 </html>
