--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="Styles/Game.css">
 	<link rel="stylesheet" href="Styles/Characteristic.css">
 	<link rel="stylesheet" href="Styles/Styles_Sesons.css">
+	<link rel="stylesheet" href="Styles/footer_styles.css">
 </head>
 <body>
 	
@@ -333,11 +334,30 @@
 							</div>
 						</div>
 					</div>
+					<footer>
+		<div class="Foter_links">
+			<div class="inst social_links">
+				<a href="https://www.instagram.com/222_zody_222/" target="_blank">
+					<img src="Images/footer/inst.webp" alt="#" width="30" height="30">
+				</a>
+			</div>
+			<div class="vk social_links">
+				<a href="https://vk.com/id223174381" target="_blank">
+					<img src="Images/footer/vk.png" alt="#" width="30" height="30">
+				</a>
+			</div>
+		</div>
+		<div class="FIO">
+			<p>Работа Горбунова Никиты</p>
+		</div>
+	</footer>
 				</div>
 
 		</div>
 		
 	</div>
+
+	
 	<script src="JS/StopFot.js"></script>
 </body>
 </html>
